--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1654,36 +1654,135 @@
       position:absolute;
       width:90%;
       height:calc(100% - 150px);
-      background:#fff;
       left:5%;
       top:100px;
       overflow:auto;
+      .item{
+        height:160px;
+        overflow:hidden;
+        border-radius: 20px;
+        margin-bottom:10px;
+        position:relative;
+        &:after, &:before{
+          content:"";
+          display:block;
+          width:calc(100% - 20px);
+          height:calc(100% - 20px);
+          border:3px solid #fff;
+          position:absolute;
+          left:10px;
+          top:10px;
+          border-radius: 15px;
+          z-index: 1;
+        }
+        &:after{
+          left:13px;
+          top:13px;
+          border-color:rgba(0, 0, 0, .5);
+          z-index: 0;
+        }
+        .img-wrap{
+          width:50%;
+          position:relative;
+          z-index: 1;
+          img{
+            width: 250%;
+            position:absolute;
+            left:50%;
+            top:-150px;
+            transform:translateX(-50%);
+          }
+        }
+        .name{
+          position:absolute;
+          right:20px;
+          bottom:20px;
+          font-size:3rem;
+          z-index: 2;
+          font-weight: 600;
+          font-family: 'NanumSquareNeo', sans-serif;
+          color:#fff;
+          text-shadow: 3px 3px rgba(0, 0, 0, .5);
+        }
+      }
     }
     &.detail{
+      .btn-wrap{
+        position:absolute;
+        left:20px;
+        top:20px;
+        background:#fff;
+        display:flex;
+        flex-direction: column;
+        padding:10px 5px;
+        border-radius: 500px;
+        z-index: 1;
+        .btn{
+          width:40px;
+          height:40px;
+        }
+      }
       .name{
-        color:#f00;
-        font-size:2rem;
-        margin:50px auto;
-        text-align: center;
+        border-top:3px solid #fff;
+        font-size:4rem;
+        background-color: rgba(255, 255, 255, .5);
+        position:absolute;
+        left:0;
+        top:60%;
+        padding:9px 20px;
+        width:100%;
+        z-index: 1;
+        font-family: 'NanumSquareNeo', sans-serif;
+        font-weight: 600;
+        text-shadow: -1px 0 rgba(255, 255, 255, .5), 0 1px rgba(255, 255, 255, .5), 1px 0 rgba(255, 255, 255, .5), 0 -1px rgba(255, 255, 255, .5);
       }
       .character{
-        position:absolute;
-        left:50%;
-        top:50%;
-        transform:translate(-50%, -50%);
+        width:100%;
+        height:100%;
+        img{
+          width:120%;
+          position:absolute;
+          left:50%;
+          top:45%;
+          transform:translate(-50%, -50%);
+          filter: drop-shadow(5px 0 #fff);
+        }
       }
       .profile{
-        background:rgba(255, 255, 255, .8);
-        width:90%;
-        position:absolute;
-        left:5%;
-        bottom:5%;
-        font-size:1.4rem;
-        height:200px;
         padding:20px;
-        overflow:auto;
-        white-space: pre-line;
+        background:rgba(255, 255, 255, .5);
+        width:100%;
+        height:190px;
+        position:absolute;
+        left:0;
+        top:calc(60% + 100px);
+        font-size:1.4rem;
         word-break: break-all;
+        color:#000;
+        text-shadow: -1px 0 rgba(255, 255, 255, .5), 0 1px rgba(255, 255, 255, .5), 1px 0 rgba(255, 255, 255, .5), 0 -1px rgba(255, 255, 255, .5);
+        .con{
+          height:100%;
+          overflow:auto;
+        }
+      }
+      .face-list{
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        justify-content: space-around;
+        width: calc(100% - 40px);
+        flex-direction: column;
+        align-items: flex-end;
+        &--item{
+          background:#fff;
+          width:20%;
+          outline:2px solid #fff;
+          margin-bottom:10px;
+          img{
+            width: 100%;
+          }
+        }
       }
     }
   }
