--- a/assets/common.scss
+++ b/assets/common.scss
@@ -58,6 +58,14 @@
     margin-bottom:2.5em;
   }
 }
+.mr{
+  &-1{
+    margin-right:.5em;
+  }
+  &-2{
+    margin-right:1em;
+  }
+}
 .mt{
   &-0{
     margin-top:0 !important;
@@ -83,6 +91,12 @@ button{
   margin: 0 5px;
   white-space: nowrap;
 
+  &.sm {
+    font-size: 1.5rem;
+    padding: 10px 20px;
+    font-weight: 300;
+  }
+
   &.md {
     font-size: 1.5rem;
     padding: 6px 10px;
@@ -102,10 +116,20 @@ button{
   }
 }
 
+button:disabled{
+  background-color:#ccc !important;
+  &:hover{
+    background-color:#ccc !important;
+  }
+}
+
 .btn {
   &-primary {
     background-color: $colPrimary !important;
     color: #fff !important;
+    span{
+      color:#fff;
+    }
 
     &:hover {
       background-color: $colPrimaryHover !important;
@@ -121,6 +145,9 @@ button{
   &-pink {
     background: $colPink;
     color: #fff !important;
+    span{
+      color:#fff;
+    }
 
     &:hover {
       background-color: $colPinkHover;
@@ -128,11 +155,15 @@ button{
   }
 
   &-blue {
-    background: $colBlue;
+    background: $colBlue !important;
     color: #fff !important;
+    border:none !important;
+    span{
+      color:#fff;
+    }
 
     &:hover {
-      background-color: $colBlueHover;
+      background-color: $colBlueHover !important;
     }
   }
 
@@ -1242,7 +1273,7 @@ button{
     }
     .btn-add{
       position:absolute;
-      right:60px;
+      right:0;
       top:-3px;
       z-index: 10;
     }
@@ -1259,6 +1290,10 @@ button{
         display: block;
         padding: 23px 25px;
         height: 185px;
+        transition:border .3s;
+        &:hover{
+          border-color:$colPrimary;
+        }
       }
     }
 
@@ -1400,6 +1435,21 @@ button{
           color: #fff;
           font-size: 1.6rem;
           background-color: $colPrimary;
+        }
+      }
+    }
+
+    &.type-temp{
+      display:flex;
+      flex-wrap: wrap;
+      .card-list--item{
+        width:calc(100% / 3 - 14px);
+        margin:0 20px 20px 0;
+        &:nth-child(3n){
+          margin-right:0;
+        }
+        a{
+          height: auto;
         }
       }
     }
@@ -2058,5 +2108,22 @@ button{
         font-size:1.6rem;
       }
     }
+  }
+}
+
+.el-scrollbar{
+  .text-center{
+    background-color:#fff;
+    position:sticky;
+    bottom:0;
+    padding:20px 0;
+  }
+}
+.setting-con{
+  .text-center{
+    background-color:#fff;
+    position:sticky;
+    bottom:-20px;
+    padding:20px 0;
   }
 }
